add pull function, fix async threading part

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-Django==2.2
-djangorestframework==3.9.2
-pytz==2018.9
-sqlparse==0.3.0
+asgiref==3.2.10
+Django==3.1.1
+djangorestframework==3.11.1
+lxml==4.5.2
+pytz==2020.1
+sqlparse==0.3.1
+
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
+Django==3.1.1
+djangorestframework==3.11.1
+idna==2.10
+lxml==4.5.2
+pytz==2020.1
+requests==2.24.0
+sqlparse==0.3.1
+urllib3==1.25.10
