--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
 asgiref==3.2.10
-Django==3.1.1
-djangorestframework==3.11.1
-lxml==4.5.2
-pytz==2020.1
-sqlparse==0.3.1
-
-asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
 Django==3.1.1
 djangorestframework==3.11.1
+h11==0.9.0
+httpcore==0.10.2
+httpx==0.14.3
 idna==2.10
 lxml==4.5.2
+pkg-resources==0.0.0
 pytz==2020.1
-requests==2.24.0
+rfc3986==1.4.0
+sniffio==1.1.0
 sqlparse==0.3.1
-urllib3==1.25.10
