--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,13 @@ httpcore==0.10.2
 httpx==0.14.3
 idna==2.10
 lxml==4.5.2
+numpy==1.19.4
+pandas==1.1.4
+python-dateutil==2.8.1
 pytz==2020.1
+requests==2.25.0
 rfc3986==1.4.0
+six==1.15.0
 sniffio==1.1.0
 sqlparse==0.3.1
+urllib3==1.26.2
