--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Django==3.1.1
-django-crispy-forms==1.10.0
 djangorestframework==3.11.1
 httpx==0.14.3
 lxml==4.5.2
@@ -7,3 +6,8 @@ pandas==1.1.4
 requests==2.25.0
 
 yfinance~=0.1.55
+
+channels~=3.0.2
+websockets~=8.1
+websocket~=0.2.1
+websocket-client~=0.57.0
